deployment-service-ingress/custom-deploy-svc-production.yaml
# Deployment custom-hello
# https://github.com/paulbouwer/hello-kubernetes
# kubectl apply -f custom-deploy-svc.yaml
# kubectl get pods -l run=custrom-kubernetes -o wide
# kubectl get svc custom-kubernetes
# https://github.com/paulbouwer/hello-kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kpcard-production
  name: custom-kubernetes
spec:
  selector:
    matchLabels:
      run: custom-kubernetes
  replicas: 3
  template:
    metadata:
      labels:
        run: custom-kubernetes
    spec:
      containers:
      - name: custom-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "1280Mi"
            cpu: "1000m"
          requests:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: kpcard-production
  name: custom-kubernetes
  labels:
    run: custom-kubernetes
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: custom-kubernetes
