deployment-service-ingress/hello-deploy-svc.yaml
# Deployment hello
# https://github.com/paulbouwer/hello-kubernetes
# kubectl apply -f hello-deploy-svc.yaml
# kubectl get pods -l run=hello-kubernetes -o wide
# kubectl get svc hello-kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kpcard-development
  name: hello-kubernetes
spec:
  selector:
    matchLabels:
      run: hello-kubernetes
  replicas: 3
  template:
    metadata:
      labels:
        run: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "1280Mi"
            cpu: "1000m"
          requests:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: kpcard-development
  name: hello-kubernetes
  labels:
    run: hello-kubernetes
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: hello-kubernetes
