deployment-service-ingress/nginx-ingress.yaml
# nginx ingress는 namespace별로 생성이 가능함.
# kpcard-development namespace의 ingress 생성
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kpcard-development
  name: nginx-ingress-development
  labels:
    profile: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tnginx.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
  - host: thello.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-kubernetes
          servicePort: 8080
  - host: tcustom.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: custom-kubernetes
          servicePort: 8080
---
# kpcard-production namespace의 ingress 생성
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kpcard-production
  name: nginx-ingress-production
  labels:
    profile: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
  - host: hello.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-kubernetes
          servicePort: 8080
  - host: custom.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: custom-kubernetes
          servicePort: 8080
